// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewsSection Component matches snapshot with news 1`] = `
<DocumentFragment>
  <div
    class="px-2"
  >
    <div
      class="flex justify-between items-center"
    >
      <div
        class="font-bold text-lg"
      >
        Sumber
      </div>
      <div
        class="flex items-center text-gray-600"
      >
        <button
          class="p-1 text-gray-300"
          disabled=""
        >
          ◀
        </button>
        <span
          class="text-sm font-semibold"
        >
          (1/2)
        </span>
        <button
          class="p-1 text-gray-600"
        >
          ▶
        </button>
      </div>
    </div>
    <div
      class="text-gray-600 text-sm font-semibold"
    >
      2023-05-01
    </div>
    <div
      class="text-sm text-justify"
    >
      Berita Pertama (news1.com)
    </div>
    <img
      alt="Berita"
      class="mt-2 rounded-lg w-full h-40 object-cover"
      src="https://example.com/news1.jpg"
    />
    <a
      class="mt-2 inline-flex items-center bg-green-600 text-white font-bold text-xs px-3 py-1.5 rounded-lg hover:bg-green-700 transition-colors"
      href="https://example.com/news1"
      rel="noopener noreferrer"
      target="_blank"
    >
      Lihat Artikel 
      <span
        data-testid="arrow-icon"
      >
        →
      </span>
    </a>
    <hr
      class="my-3"
    />
  </div>
</DocumentFragment>
`;

exports[`NewsSection Component matches snapshot without image 1`] = `
<DocumentFragment>
  <div
    class="px-2"
  >
    <div
      class="flex justify-between items-center"
    >
      <div
        class="font-bold text-lg"
      >
        Sumber
      </div>
      <div
        class="flex items-center text-gray-600"
      >
        <button
          class="p-1 text-gray-300"
          disabled=""
        >
          ◀
        </button>
        <span
          class="text-sm font-semibold"
        >
          (1/1)
        </span>
        <button
          class="p-1 text-gray-300"
          disabled=""
        >
          ▶
        </button>
      </div>
    </div>
    <div
      class="text-gray-600 text-sm font-semibold"
    >
      2023-05-03
    </div>
    <div
      class="text-sm text-justify"
    >
      Berita Tanpa Gambar (news3.com)
    </div>
    <a
      class="mt-2 inline-flex items-center bg-green-600 text-white font-bold text-xs px-3 py-1.5 rounded-lg hover:bg-green-700 transition-colors"
      href="https://example.com/news3"
      rel="noopener noreferrer"
      target="_blank"
    >
      Lihat Artikel 
      <span
        data-testid="arrow-icon"
      >
        →
      </span>
    </a>
    <hr
      class="my-3"
    />
  </div>
</DocumentFragment>
`;
